--- a/src/pages/addFriend/index.scss
+++ b/src/pages/addFriend/index.scss
@@ -5,12 +5,8 @@
         width: 100%;
     }
     .codeDesc {
-        position: absolute;
-        z-index: 2;
-        bottom: 110px;
         text-align: center;
-        width: 80%;
-        left: 10%;
+        margin-top: 42px;
         color: #888;
     }
     .qrCode {
